Not Sure how this build with the typo...

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
@@ -1,4 +1,4 @@
-﻿Facebook Events@page "/management/media"
+﻿@page "/management/media"
 @using Churchee.Module.Site.Features.CDN.Queries
 @using Churchee.Module.Site.Features.Media.Commands
 @using Churchee.Module.Site.Features.Media.Queries
