--- a/src/Churchee.Module.UI/Components/Image.razor
+++ b/src/Churchee.Module.UI/Components/Image.razor
@@ -11,7 +11,7 @@
         <RadzenProgressBarCircular Style="width:100%" ProgressBarStyle="ProgressBarStyle.Primary" Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate"></RadzenProgressBarCircular>
     }
 
-    <img src="@FullImageUrl" @onload="OnImageLoad" alt="@AltText" style="display:@(isLoading ? "none" : "block"); width:100%; height:auto; @Styles" crossorigin />
+<img src="@FullImageUrl" @onload="OnImageLoad" @onerror="HandleError" alt="@AltText" style="display:@(isLoading ? "none" : "block"); width:100%; height:auto; @Styles" crossorigin />
 
 
 @code {
@@ -35,7 +35,7 @@
     {
         get
         {
-            
+
             if (ImageUrl.StartsWith("https"))
             {
                 return ImageUrl;
@@ -55,5 +55,26 @@
     private void OnImageLoad()
     {
         isLoading = false;
+    }
+
+    private bool IsNotOriginal(string fileName)
+    {
+        return fileName.EndsWith("_t") || fileName.EndsWith("_s") || fileName.EndsWith("_m");
+    }
+
+    private void HandleError()
+    {
+        string fileName = Path.GetFileNameWithoutExtension(ImageUrl);
+
+        string fileExt = Path.GetExtension(ImageUrl);
+
+        if (IsNotOriginal(fileName))
+        {
+            ImageUrl = $"{fileName.Substring(0, fileName.Length - 2)}{fileExt}";
+
+            return;
+        }
+
+        ImageUrl = "/not-found.png";
     }
 }
