Media Listing in Admin now using thumnail image, and image fall backs should now work properly

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
@@ -59,7 +59,7 @@
                 <RadzenCard Style="margin: 5px">
 
                                 <div class="rz-image-wrap" style="width:100%;">
-                                    <Image Prefix="@imagePrefix" ImageUrl="@(item.MediaUrl)" AltText="@item.Title" Styles="width: 100%; height: 200px; object-fit:cover;"></Image>
+                                        <Image Prefix="@imagePrefix" ImageUrl="@(item.MediaUrlSmall)" AltText="@item.Title" Styles="width: 100%; height: 200px; object-fit:cover;"></Image>
                                </div>
 
                                 <RadzenStack Orientation="Orientation.Horizontal" Gap="4px" AlignItems="AlignItems.Start" Style="padding: 1rem 0 0;">
