Fixes: Page Name not changing

--- a/src/Churchee.Module.Identity/Areas/Account/Pages/ForgotPassword.cshtml
+++ b/src/Churchee.Module.Identity/Areas/Account/Pages/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model Churchee.Module.Identity.Areas.Account.Pages.LoginModel
+@model Churchee.Module.Identity.Areas.Account.Pages.ForgotPasswordModel
 @{
-    ViewData["Title"] = "Login To Churchee";
+    ViewData["Title"] = "Forgot your password?";
     Layout = "./_LoginLayout";
 }
 
@@ -19,27 +19,12 @@
                 @Html.EditorFor(m => m.Input.Email)
                 @Html.ValidationMessageFor(m => m.Input.Email)
             </div>
-            <div class="field">
-                @Html.LabelFor(m => m.Input.Password)
-                @Html.TextBoxFor(m => m.Input.Password, new { autocomplete = "off", type = "password", @class="text-box single-line" })
-                @Html.ValidationMessageFor(m => m.Input.Password)
-            </div>
-            <div class="field">
-                <div class="checkbox-wrap">
-                    @Html.CheckBoxFor(m => m.Input.RememberMe)
-                    @Html.LabelFor(m => m.Input.RememberMe)
-                    @Html.ValidationMessageFor(m => m.Input.RememberMe)
-                </div>
-            </div>
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div>
                 <button type="submit">Log in</button>
             </div>
-
-            <a href="/account/forgotpassword">Forgotten password?</a>
-
             <div>
             </div>
         </form>
