--- a/src/Churchee.Module.Site/Areas/Site/Pages/Styles/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Styles/Index.razor
@@ -5,6 +5,7 @@
 @using Churchee.Module.Site.Features.Styles.Commands
 @using Churchee.Module.Site.Features.Styles.Queries
 @using MediatR
+@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.Logging
 @using Radzen.Blazor
 @using Radzen
