--- a/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Create.razor
@@ -9,7 +9,7 @@
 @inject NotificationService _notificationService
 @inject NavigationManager NavigationManager
 
-<PageName Name="Create Page Type"></PageName>
+<PageName Name="Create Page Template"></PageName>
 
 <Form InputModel="@InputModel" OnSave=@(async () => await ValidSubmitForm()) />
 
