--- a/src/Churchee.Module.Facebook.Events/Areas/Integrations/Pages/FacebookEvents.razor
+++ b/src/Churchee.Module.Facebook.Events/Areas/Integrations/Pages/FacebookEvents.razor
@@ -18,7 +18,7 @@
 @inject IHttpContextAccessor _httpContextAccessor
 @inject NavigationManager NavigationManager
 
-
+<PageName></PageName>
 
 @if (!Linked)
 {
